--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-slot": "^1.2.0",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
+    "mysql2": "^3.14.0",
+    "mysql2-promise": "^0.1.4",
     "next": "15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +32,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
