--- a/.github/workflows/azure_app_hello-trello.yml
+++ b/.github/workflows/azure_app_hello-trello.yml
@@ -29,9 +29,11 @@ jobs:
       - name: Prepare app for deployment
         run: |
           mkdir deploy
-          cp -r .next public package.json server.js next.config.ts deploy/
-          cp -r node_modules deploy/node_modules
-        # Adjust files based on your project structure
+          cp -r .next/standalone/* deploy/
+          cp -r .next/static deploy/.next/static
+          cp server.js deploy/server.js
+          cp next.config.js deploy/next.config.js
+          cp package.json deploy/package.json
 
       - name: Zip artifact for deployment
         run: |
